swap to h2 and get all controller.

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation group: 'net.sourceforge.tess4j', name: 'tess4j', version: '4.5.4'
 	implementation group: 'commons-io', name: 'commons-io', version: '2.10.0'
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.21'
+	implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+
 
 
 }
